@@ -1,5 +1,9 @@
 ﻿GNomEx Release Notes
 
+------------------------
+- Fixed bug causing billing statements to be sent incorrectly
+- Fixed bug causing some experiments to not show up on Experiment list on Billing tab.
+
 5.2.5 (Aug 24, 2011)
 ------------------------
 - Allow samples with duplicate index tags to be combined into one multiplex group.  (Warn user, but permit it.)
